deploy/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost-on-kubernetes
  labels:
    app: ghost-on-kubernetes
    app.kubernetes.io/name: ghost-on-kubernetes
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: '6.0'
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: ghost-on-kubernetes
