deploy/base/06-ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-on-kubernetes
  namespace: ghost-on-kubernetes
  labels:
    app: ghost-on-kubernetes
    app.kubernetes.io/name: ghost-on-kubernetes
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: '6.0'
    app.kubernetes.io/component: ghost
    app.kubernetes.io/part-of: ghost-on-kubernetes


spec:
  # If you want HA for your Ghost instance, you can increase the number of replicas AFTER creation and you need to adjust the storage class. See 02-pvc.yaml for more information.
  replicas: 1
  selector:
    matchLabels:
      app: ghost-on-kubernetes
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  revisionHistoryLimit: 4
  progressDeadlineSeconds: 600
  template:
    metadata:
      namespace: ghost-on-kubernetes
      labels:
        app: ghost-on-kubernetes
    spec:
      automountServiceAccountToken: false # Disable automounting of service account token
      volumes:
      - name: k8s-ghost-content
        persistentVolumeClaim:
          claimName: k8s-ghost-content

      - name: ghost-config-prod
        secret:
          secretName: ghost-config-prod
          defaultMode: 420

      - name: tmp
        emptyDir:
          sizeLimit: 64Mi
      # Since ghost-on-kubernetes v6.20.0 the initContainer is optional because we moved this functionality into the image's entrypoint.js.
      # Uncomment the following block if you want to keep an initContainer or if you have permissions issues.
      containers:
      - name: ghost-on-kubernetes
        # For development, you can use the following image:
        # Development image: ghcr.io/sredevopsorg/ghost-on-kubernetes:latest-dev
        # Latest image tag: main
        # You can also pin to a specific version, example: ghcr.io/sredevopsorg/ghost-on-kubernetes:v6.20.0
        image: ghcr.io/sredevopsorg/ghost-on-kubernetes:main
        imagePullPolicy: Always
        ports:
        - name: ghk8s
          containerPort: 2368
          protocol: TCP

        # # You should uncomment the following lines in production. Change the values according to your environment.
        # readinessProbe:
        #   httpGet:
        #     path: /ghost/api/v4/admin/site/
        #     port: ghk8s
        #     httpHeaders:
        #     - name: X-Forwarded-Proto
        #       value: https
        #     - name: Host
        #       value: yourdomain.tld
        #   periodSeconds: 10
        #   timeoutSeconds: 3
        #   successThreshold: 1
        #   failureThreshold: 3
        #   initialDelaySeconds: 10

        # livenessProbe:
        #   httpGet:
        #     path: /ghost/api/v4/admin/site/
        #     port: ghk8s
        #     httpHeaders:
        #     - name: X-Forwarded-Proto
        #       value: https
        #     - name: Host
        #       value: yourdomain.tld
        #   periodSeconds: 300
        #   timeoutSeconds: 3
        #   successThreshold: 1
        #   failureThreshold: 1
        #   initialDelaySeconds: 30

        resources:
          limits:
            cpu: 800m
            memory: 800Mi
          requests:
            cpu: 100m
            memory: 256Mi

        volumeMounts:
        - name: k8s-ghost-content
          mountPath: /home/nonroot/app/ghost/content
          readOnly: false
        - name: ghost-config-prod
          readOnly: true
          mountPath: /home/nonroot/app/ghost/config.production.json
          subPath: config.production.json
        - name: tmp # This is the temporary volume mount to allow loading themes
          mountPath: /tmp
          readOnly: false
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 65532 # The UID of the nonroot user


      restartPolicy: Always
      terminationGracePeriodSeconds: 15
      dnsPolicy: ClusterFirst
      # Optional: Uncomment the following to specify node selectors
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: node-role.kubernetes.io/worker
      #               operator: In
      #               values:
      #                 - 'true'
      securityContext: {}
