deploy/base/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-on-kubernetes-service
  namespace: ghost-on-kubernetes
  labels:
    app: ghost-on-kubernetes
    app.kubernetes.io/name: ghost-on-kubernetes-service
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: '6.0'
    app.kubernetes.io/component: service-frontend
    app.kubernetes.io/part-of: ghost-on-kubernetes


spec:
  ports:
  - port: 2368
    protocol: TCP
    targetPort: ghk8s
    name: ghk8s
  type: ClusterIP
  selector:
    app: ghost-on-kubernetes

---
apiVersion: v1
kind: Service
metadata:
  name: ghost-on-kubernetes-mysql-service
  namespace: ghost-on-kubernetes
  labels:
    app: ghost-on-kubernetes-mysql
    app.kubernetes.io/name: ghost-on-kubernetes-mysql-service
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: '6.0'
    app.kubernetes.io/component: service-database
    app.kubernetes.io/part-of: ghost-on-kubernetes

spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: mysqlgh
    name: mysqlgh
  type: ClusterIP
  clusterIP: None
  selector:
    app: ghost-on-kubernetes-mysql

---
apiVersion: v1
kind: Service
metadata:
  name: ghost-on-kubernetes-valkey-service
  namespace: ghost-on-kubernetes
  labels:
    app: ghost-on-kubernetes-valkey
    app.kubernetes.io/name: ghost-on-kubernetes-valkey-service
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: '6.0'
    app.kubernetes.io/component: service-cache
    app.kubernetes.io/part-of: ghost-on-kubernetes

spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: valkey
    name: valkey
  type: ClusterIP
  selector:
    app: ghost-on-kubernetes-valkey
