deploy/base/07-ingress.yaml
# Optional: If you have a domain name, you can create an Ingress resource to expose your Ghost blog to the internet.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-on-kubernetes-ingress
  namespace: ghost-on-kubernetes
  labels:
    app: ghost-on-kubernetes
    app.kubernetes.io/name: ghost-on-kubernetes-ingress
    app.kubernetes.io/instance: ghost-on-kubernetes
    app.kubernetes.io/version: '6.0'
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: ghost-on-kubernetes

spec:
  ingressClassName: traefik # Or your ingress controller
  tls:
  - hosts:
    - yourdomain.tld
    # Optional:
    # - www.yourdomain.tld
    secretName: tls-secret
  rules:
  - host: yourdomain.tld
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: ghost-on-kubernetes-service
            port:
              name: ghk8s
  # Optional:
  # - host: www.yourdomain.tld
  #   http:
  #     paths:
  #     - path: /
  #       pathType: ImplementationSpecific
  #       backend:
  #         service:
  #           name: ghost-on-kubernetes-service
  #           port:
  #             name: ghk8s
